# challenges_resolutions

./: .gitignore  README.md  bank_process.py  models.py  pyproject.toml  requirements.txt
