[tool.poetry]
name = "resolution_challenges"
version = "0.1.0"
description = ""
authors = ["giuseppe.saraceno"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
tqdm = "^4.62.3"
SQLAlchemy = "^1.4.27"
PyMySQL = "^1.0.2"
cryptography = "^35.0.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
